--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://danghiep0122.github.io/vue-basic---vue-org/",
   "name": "vue-basic",
   "version": "0.0.0",
   "private": true,
